update backend wiring

--- a/src/pages/otc/OTC.module.scss
+++ b/src/pages/otc/OTC.module.scss
@@ -26,3 +26,27 @@
   width: calc(100% - var(--spacing-unit) * 1.5);
   margin-left: calc(var(--spacing-unit) * 1.5);
 }
+
+.result {
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: 100%;
+
+  padding: calc(var(--spacing-unit) * 6);
+}
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: calc(var(--spacing-unit) * 3);
+
+  margin: 0;
+  margin-bottom: calc(var(--spacing-unit) * 2.5);
+  padding: 0;
+
+  list-style: none;
+}
+
+.pagination {
+  margin-top: auto;
+}
