--- a/src/ui/alert/Alert.module.scss
+++ b/src/ui/alert/Alert.module.scss
@@ -2,7 +2,7 @@
 @use "../../helper/style/media";
 
 .component {
-  display: inline-flex;
+  display: inline-block;
   padding: calc(var(--spacing-unit) * 1.5) calc(var(--spacing-unit) * 2);
 
   font-family: var(--primary-font);
@@ -63,7 +63,6 @@
 }
 
 .text {
+  vertical-align: top;
   color: rgba(var(--primary-black), 0.7);
-
-  margin-left: calc(var(--spacing-unit) * 0.5);
 }
