--- a/src/modules/header/ui/user-info/UserInfo.module.scss
+++ b/src/modules/header/ui/user-info/UserInfo.module.scss
@@ -115,17 +115,14 @@
 }
 
 .copyAddress {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: flex-start;
-  grid-column-gap: calc(var(--spacing-unit) * 0.5);
-
-  margin: 0;
   margin-top: var(--spacing-unit);
 
   font-size: 0.875rem;
   color: rgba(var(--primary-black), 0.5);
+}
+
+.copyAddress svg {
+  width: 20px;
 }
 
 .ethBalance {
