--- a/src/pages/otc-detail/View.module.scss
+++ b/src/pages/otc-detail/View.module.scss
@@ -93,6 +93,13 @@
   grid-column: -1/1;
 }
 
+.copy svg {
+  width: 13.5px;
+  margin-top: -2px;
+
+  color: rgba(var(--primary-black), 0.3);
+}
+
 .action {
   display: grid;
   grid-template-rows: auto 1fr;
