--- a/src/modules/auction-card/Card.module.scss
+++ b/src/modules/auction-card/Card.module.scss
@@ -1,5 +1,5 @@
-@use "../../../../helper/style/mixin";
-@use "../../../../helper/style/media";
+@use "../../helper/style/mixin";
+@use "../../helper/style/media";
 
 .component {
   display: grid;
@@ -13,6 +13,10 @@
 
   border-radius: 0.375rem;
   background-color: rgba(var(--primary-white), 1);
+}
+
+.bordered {
+  border: 1px solid rgba(var(--primary-black), 0.2);
 }
 
 .title {
