activate dots for header

--- a/src/modules/header/Header.module.scss
+++ b/src/modules/header/Header.module.scss
@@ -32,11 +32,15 @@
 }
 
 .logo {
-  margin-right: calc(var(--spacing-unit) * 6);
+  margin-right: calc(var(--spacing-unit) * 2.5);
 }
 
 .logo svg {
   height: auto;
+}
+
+.dots {
+  margin-right: calc(var(--spacing-unit) * 3);
 }
 
 .navigation {
