--- a/src/modules/header/ui/user-info/UserInfo.module.scss
+++ b/src/modules/header/ui/user-info/UserInfo.module.scss
@@ -51,17 +51,6 @@
   }
 }
 
-.wrapper::after {
-  position: absolute;
-  top: 0;
-  content: "";
-
-  display: block;
-  height: 4.75rem;
-
-  cursor: pointer;
-}
-
 .toggle {
   display: grid;
   place-content: center;
@@ -77,9 +66,22 @@
   background: linear-gradient(360deg, #fff 0%, rgba(255, 255, 255, 0) 50%), #000;
 }
 
+.toggle::after {
+  position: absolute;
+  top: 50%;
+  content: "";
+
+  display: block;
+  height: calc(var(--header-height) + 10px);
+
+  transform: translateY(-50%);
+
+  cursor: pointer;
+}
+
 .dropdown {
   position: absolute;
-  top: 3.625rem;
+  top: calc((var(--header-height) - 2.75rem) / 2 + 5px + 2.75rem);
   right: 0;
   z-index: 2000;
 
