--- a/src/modules/header/ui/user-info/UserInfo.module.scss
+++ b/src/modules/header/ui/user-info/UserInfo.module.scss
@@ -142,6 +142,10 @@
   width: 13.5px;
 }
 
+.links {
+  border-bottom: 1px solid rgba(var(--primary-black), 0.1);
+}
+
 .link {
   width: 100%;
   padding: calc(var(--spacing-unit) * 1.5) calc(var(--spacing-unit) * 3);
