--- a/src/modules/auction-card/Card.module.scss
+++ b/src/modules/auction-card/Card.module.scss
@@ -2,6 +2,8 @@
 @use "../../helper/style/media";
 
 .component {
+  position: relative;
+
   display: grid;
   grid-template-columns: auto auto;
   justify-content: stretch;
@@ -13,6 +15,8 @@
 
   border-radius: 0.375rem;
   background-color: rgba(var(--primary-white), 1);
+
+  overflow: hidden;
 }
 
 .bordered {
@@ -72,13 +76,14 @@
 
 .claim {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
+  left: -1px;
 
   display: grid;
   place-content: center;
 
-  width: 100%;
-  height: 2.75rem;
+  width: calc(100% + 2px);
+  height: calc(2.75rem + 1px);
 
   font-size: var(--body-1);
   font-weight: var(--regular);
