--- a/src/pages/auction-detail/View.module.scss
+++ b/src/pages/auction-detail/View.module.scss
@@ -1,3 +1,6 @@
+@use "../../helper/style/mixin";
+@use "../../helper/style/media";
+
 .component {
   display: grid;
 
@@ -12,10 +15,14 @@
   display: grid;
   align-content: flex-start;
 
-  padding: calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 14.5);
+  padding: calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 7.5);
 
   border-radius: 0.5rem;
   background-color: rgba(var(--primary-white), 1);
+
+  @include mixin.from(media.$xl) {
+    padding: calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 14.5);
+  }
 }
 
 .navigation {
