--- a/src/pages/account/Account.module.scss
+++ b/src/pages/account/Account.module.scss
@@ -7,7 +7,7 @@
   align-content: start;
 
   min-height: calc(100vh - var(--header-height));
-  padding: calc(var(--spacing-unit) * 6.5);
+  padding: calc(var(--spacing-unit) * 6.5) 0;
 
   box-sizing: border-box;
 
