--- a/src/pages/account/Account.module.scss
+++ b/src/pages/account/Account.module.scss
@@ -69,6 +69,43 @@
   grid-column-gap: calc(var(--spacing-unit) * 2);
 }
 
+.alert {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: start;
+  align-items: center;
+  grid-column-gap: 0.5rem;
+
+  min-height: 3.75rem;
+  margin-top: calc(var(--spacing-unit) * 5);
+  padding: 0 1.25rem;
+
+  box-sizing: border-box;
+
+  border: 1px solid rgba(var(--primary-black), 0.5);
+  border-radius: 0.5rem;
+
+  background-color: #F7F7F7;
+}
+
+.alertBold {
+  font-weight: var(--bold);
+}
+
+.alertText {
+  display: inline-flex;
+  align-items: center;
+}
+
+.alertLink {
+  margin-left: 0.25rem;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+
+  text-decoration: underline;
+}
+
 .tabs {
   display: grid;
   grid-auto-flow: column;
