🎈 perf(Header -> Connect Wallet): Upgrade UE

--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -21,12 +21,12 @@
 
 .mobile {
   @include mixin.from(media.$lg) {
-    display: none;
+    // display: none;
   }
 }
 
 .desktop {
   @include mixin.until(media.$lg) {
-    display: none;
+    // display: none;
   }
 }
