--- a/src/modules/connect-wallet-modal/ConnectWalletModal.module.scss
+++ b/src/modules/connect-wallet-modal/ConnectWalletModal.module.scss
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  cursor: pointer;
 
   min-height: 4.375rem;
   min-width: 23.75rem;
@@ -50,12 +51,21 @@
 
   border: 1px solid rgba(var(--primary-black), 0.1);
   border-radius: 3.0625rem;
-
   background-color: rgba(var(--primary-white), 1);
 
-  transition-timing-function: linear;
-  transition-property: border-color;
-  transition-duration: 250ms;
+  transition: all linear .25s;
+
+  &:hover {
+    color: rgba(var(--primary-white), 1);
+    background-color: rgba(var(--primary-black), 1);
+    fill:rgba(var(--primary-white), 1);
+  }
+}
+
+.arrow {
+  width: 0.5rem;
+  margin-left: auto;
+  fill: inherit;
 }
 
 .icon {
