fix: [BOUNCE-90] show alert and disble submitting when fromToken the same as toToken in creating Fixed-Swap auction

--- a/src/pages/create-auction/ui/fixed/Fixed.module.scss
+++ b/src/pages/create-auction/ui/fixed/Fixed.module.scss
@@ -54,3 +54,9 @@
 .submit {
   margin-top: calc(var(--spacing-unit) * 0.5);
 }
+
+.alert {
+  display: grid;
+
+  margin-bottom: calc(var(--spacing-unit) * 4);
+}
