--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,6 +24,7 @@ html {
   --primary-black: 0, 0, 0;
   --ocean-blue: 38, 99, 255;
   --success: 45, 171, 80;
+  --warning: 255,199,0;
   --process: 75, 112, 255;
   --error: 255, 0, 0;
   --coming: 255, 0, 0;
