--- a/src/modules/currency/Currency.module.scss
+++ b/src/modules/currency/Currency.module.scss
@@ -6,29 +6,12 @@
   align-content: center;
 }
 
-.component::before {
-  position: relative;
-  content: "";
-
-  width: 1.5rem;
-  height: 1.5rem;
-
-  border-radius: 50%;
-
-  background-color: rgba(var(--primary-black), 0.1);
-  background-image: var(--icon);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  overflow: hidden;
-}
-
 .small {
   grid-column-gap: calc(var(--spacing-unit) * 0.75);
 }
 
-.small::before {
+.small>img {
   width: 0.875rem;
   height: 0.875rem;
+  vertical-align: top;
 }
