--- a/src/ui/progress-bar/ProgressBar.module.scss
+++ b/src/ui/progress-bar/ProgressBar.module.scss
@@ -8,7 +8,6 @@
 
   width: 100%;
   height: 0.25rem;
-
   background-color: rgba(var(--color), 0.1);
 
   &::before {
@@ -20,12 +19,8 @@
 
     display: block;
     width: var(--progress-bar);
-
     background-color: rgba(var(--color), 1);
-
-    transition-timing-function: linear;
-    transition-duration: 250ms;
-    transition-property: width;
+    transition: width .25s linear .1s;
   }
 }
 
