--- a/src/modules/header/ui/user-info/UserInfo.module.scss
+++ b/src/modules/header/ui/user-info/UserInfo.module.scss
@@ -6,7 +6,8 @@
   display: grid;
   grid-auto-flow: column;
   align-items: center;
-
+  
+  min-width: 15rem;
   height: 2.75rem;
   padding-left: 1rem;
   padding-right: 3.5rem;
