--- a/src/pages/create-auction/ui/fixed/Fixed.module.scss
+++ b/src/pages/create-auction/ui/fixed/Fixed.module.scss
@@ -40,7 +40,8 @@
   margin: 0;
 
   box-sizing: border-box;
-
+  cursor: pointer;
+  
   font-family: var(--primary-font);
   font-size: 0.875rem;
   color: rgba(var(--primary-white), 1);
