--- a/src/ui/progress-bar/ProgressBar.module.scss
+++ b/src/ui/progress-bar/ProgressBar.module.scss
@@ -8,19 +8,20 @@
 
   width: 100%;
   height: 0.25rem;
+
   background-color: rgba(var(--color), 0.1);
 
-  &::before {
+  >div {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     content: "";
-
     display: block;
-    width: var(--progress-bar);
+    width: 0%;
+
     background-color: rgba(var(--color), 1);
-    transition: width .25s linear .1s;
+    transition: width .3s ease;
   }
 }
 
