--- a/src/modules/header/ui/navigation/Navigation.module.scss
+++ b/src/modules/header/ui/navigation/Navigation.module.scss
@@ -23,7 +23,7 @@
   height: var(--header-height);
 
   &:hover .dropdown,
-  #{mixin.$when-focus-rings-enabled} &:focus .dropdown {
+  &:focus .dropdown {
     opacity: 1;
     visibility: visible;
   }
@@ -103,7 +103,7 @@
   transition-property: background-color;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus {
+  &:focus {
     background-color: #ededed;
   }
 }
