--- a/src/pages/account/Account.module.scss
+++ b/src/pages/account/Account.module.scss
@@ -133,7 +133,7 @@
   transition-duration: 250ms;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus {
+  &:focus {
     opacity: 1;
   }
 }
