--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -117,7 +117,6 @@
   transition-property: color, box-shadow, background-color;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
 
@@ -150,7 +149,7 @@
   transition-property: background-image, opacity;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
   }
@@ -175,7 +174,7 @@
   transition-property: color, background-image, opacity, box-shadow;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     color: rgba(var(--primary-white), 1);
 
@@ -198,7 +197,7 @@
   transition-property: color;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     color: rgba(var(--primary-black), 0.6);
   }
@@ -217,7 +216,7 @@
   transition-property: color;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
   }
@@ -236,7 +235,7 @@
   transition-property: color;
 
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
   }
@@ -248,8 +247,9 @@
 }
 
 .rainbow {
+
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &.hover {
     color: rgba(var(--primary-white), 1);
 
