--- a/src/ui/calendar/Day.module.scss
+++ b/src/ui/calendar/Day.module.scss
@@ -44,7 +44,7 @@
   }
 
   &:hover::before,
-  #{mixin.$when-focus-rings-enabled} &:focus::before {
+  &:focus::before {
     box-shadow: inset 0 0 0 1px rgba(var(--primary-black), 1);
   }
 }
@@ -59,7 +59,7 @@
   cursor: initial;
 
   &:hover::before,
-  #{mixin.$when-focus-rings-enabled} &:focus::before {
+  &:focus::before {
     box-shadow: none;
   }
 }
@@ -93,7 +93,7 @@
   cursor: initial;
 
   &:hover::before,
-  #{mixin.$when-focus-rings-enabled} &:focus::before {
+  &:focus::before {
     box-shadow: none;
   }
 }
