--- a/src/ui/input/Input.module.scss
+++ b/src/ui/input/Input.module.scss
@@ -86,7 +86,7 @@
 
   &,
   &:hover,
-  #{mixin.$when-focus-rings-enabled} &:focus,
+  &:focus,
   &:active {
     transition-delay: 9999s, 9999s;
     transition-property: background-color, color;
