--- a/src/pages/farm/Farm.module.scss
+++ b/src/pages/farm/Farm.module.scss
@@ -2,5 +2,97 @@
 @use "../../helper/style/media";
 
 .component {
+  padding: calc(var(--spacing-unit) * 11.5) 0;
+}
 
+.wrapper {
+  width: 100%;
+  max-width: 26.25rem;
+  margin: 0 auto;
+  padding: calc(var(--spacing-unit) * 3.75) calc(var(--spacing-unit) * 5);
+  border-radius: 0.5rem;
+  background-color: rgba(var(--primary-white));
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 1.5rem;
+  border-bottom: 2px solid rgba(var(--primary-black));
+}
+.headLeftContent {
+  display: flex;
+  align-items: center;
+}
+.logoIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 50%;
+  background: rgba(var(--primary-black));
+}
+.logoTit {
+  margin-left: 0.5rem;
+  font-size: var(--body-1);
+  font-family: var(--primary-font);
+}
+.headRightContent {
+  padding: 0 1rem;
+  line-height: 2rem;
+  border-radius: 4.375rem;
+  background: #F3F3F3;
+}
+.label {
+  color: rgba(0, 0 ,0, 0.5);
+}
+.value {
+  margin-left: 0.375rem;
+  color: #1F191B;
+  font-weight: var(--medium);
+}
+.rewardWrap {
+  padding-top: 1.5rem;
+}
+.rewardsLable {
+  display: flex;
+  justify-content: space-between;
+}
+.rewardsLable span {
+  color: rgba(0, 0 ,0, 0.5);
+  font-weight: var(--bold);
+}
+.rewardsValue {
+  padding: 1.5rem 0;
+  font-family: var(--primary-font);
+  color: rgba(var(--primary-black));
+}
+.rewardsValue span:first-child {
+  font-size: 4.125rem;
+  margin-right: 0.75rem;
+}
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 0.75rem;
+}
+.amountWrapper {
+  padding-top: 1.75rem;
+
+}
+.amountItem {
+  display: flex;
+  justify-content: space-between;
+  font-size: var(--caption);
+  font-family: var(--primary-font);
+}
+.amountItem:last-child {
+  margin-top: 0.75rem;
+}
+.amountItem span:first-child {
+  color: rgba(var(--primary-black), 0.5);
+
+}
+.amountItem span:last-child {
+  color: #1F191B;
 }
