feat: working on card

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,6 +37,10 @@ html {
   --gutters: 6rem;
   --grid: 100%;
 
+  // card
+  
+  --governance-card-width: 25rem;
+
   //input
 
   --field-height: 3.75rem;
