--- a/src/modules/governance-card/Card.module.scss
+++ b/src/modules/governance-card/Card.module.scss
@@ -14,6 +14,12 @@
 
 	border-radius: 0.375rem;
 	background-color: rgba(var(--primary-white), 1);
+
+	transition: all 0.2s ease-in;
+	&:hover {
+    transform: translate3d(0, -1px, -2px);    
+		box-shadow: 0 0 30px rgb(0 0 0 / 15%);
+	}
 }
 
 .bordered {
