--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,11 +23,11 @@ html {
   --primary-white: 255, 255, 255;
   --primary-black: 0, 0, 0;
   --ocean-blue: 38, 99, 255;
-  --success: 45, 171, 80;
-  --warning: 255,199,0;
-  --process: 75, 112, 255;
-  --error: 255, 0, 0;
-  --coming: 255, 0, 0;
+  --success: 45, 171, 80;  // green
+  --warning: 255,199,0;  // yellow
+  --process: 75, 112, 255;  // blue
+  --error: 255, 0, 0;  // rec
+  --coming: 255, 0, 0;  // red
 
   //grid
 
